<resources>
    <string name="app_name">amBacSi</string>
    <string name="splash_network_error">Cannot connect to the Internet!</string>
    <string name="splash_offline">You are currently offline.</string>
    <string name="splash_welcome">Welcome back!</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_username_hint">Username</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_retype_password_hint">Retype Password</string>
    <string name="sign_up_terms">
        By clicking REGISTER you agree to our Terms of Use and Privacy Policy
    </string>
    <string name="sign_up_login">Already registered. Login Me!</string>
    <string name="sign_up_error_invalid_email">This email address is invalid</string>
    <string name="sign_up_error_existed_email">This email address is existed</string>
    <string name="sign_up_error_invalid_username">This username is invalid</string>
    <string name="sign_up_error_existed_username">This username is existed</string>
    <string name="sign_up_error_too_short_password">This password is too short</string>
    <string name="sign_up_error_week_password">This password is not strong enough</string>
    <string name="sign_up_error_not_matched_password">This password is not matched</string>
    <string name="sign_up_error_field_required">This field is required</string>
    <string name="sign_up_error_unknown">An error occurred. Please try again later!</string>
    <string name="sign_up_success">Register successfully!</string>
    <string name="sign_up_success_without_name">Register successfully, but your name was not saved.</string>
    <string name="login_title">AmBacSi</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_with">or login with</string>
    <string name="login_forgot_password">Forgot your Password?</string>
    <string name="login_sign_up">Not a member? Register now!</string>
    <string name="login_error_invalid_username">This username is invalid</string>
    <string name="login_error_not_exist_username">This username does not exist or has been disabled</string>
    <string name="login_error_too_short_password">This password is too short</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_error_unknown">An error occurred. Please try again later!</string>
    <string name="login_error_failed">Check your information.</string>
    <string name="login_success">Login successfully!</string>
    <string name="login_error_authentication">Authentication failed.</string>
    <string name="login_error_user_collision">Already exists an account with your email address.</string>
    <string name="login_error_user_collision_facebook">Login and link your account to Facebook!</string>
    <string name="login_error_user_collision_google">Login and link your account to Google!</string>
    <string name="login_error_play_service_not_available">Google Play Services is not available.</string>
    <string name="login_error_play_service_connection">Google Play Services error.</string>
    <string name="login_error_facebook_not_available">Facebook Services is not available.</string>
    <string name="login_error_facebook_connection">Facebook Services error.</string>
    <string name="forgot_password_title">Forgot your Password?</string>
    <string name="forgot_password_email_hint">Email</string>
    <string name="forgot_password_instruction">
        We just need your registered Email Id to sent you password reset instructions.
    </string>
    <string name="forgot_password_login"><![CDATA[<< BACK]]></string>
    <string name="forgot_password_error_invalid_email">This email address is invalid</string>
    <string name="forgot_password_error_not_existed_email">This email address is not existed</string>
    <string name="forgot_password_error_field_required">This field is required</string>
    <string name="forgot_password_error_unknown">An error occurred. Please try again later!</string>
    <string name="forgot_password_success">Check your email for password reset instructions!</string>
    <string name="create_profile_title">Create Profile</string>
    <string name="create_profile_select_group">Add profiles</string>
    <string name="create_profile_select_group_caption">You can update and add profile later.</string>
    <string name="create_profile_user">Standard User</string>
    <string name="create_profile_user_detail">Use app as a normal user with standard feature</string>
    <string name="create_profile_doctor">Doctor</string>
    <string name="create_profile_doctor_detail">Use app to interact with your patients</string>
    <string name="create_profile_clinical_center">Clinical Center</string>
    <string name="create_profile_clinical_center_detail">Use app to manage your doctors, schedule</string>
    <string name="create_profile_error_field_required">This field is required</string>
    <string name="create_profile_skip_title">Skip create profile</string>
    <string name="create_profile_skip_message">We will create a default Standard User profile automatically.</string>
    <string name="clinical_center_type">Clinical Center type</string>
    <string name="clinical_center_type_private">Private Clinical Center</string>
    <string name="clinical_center_type_hospital">Public Hospital</string>
    <string name="gender_title">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="date_format">dd-MMM-yy</string>
    <string name="logout_error_no_connection">Cannot logout when offline!</string>
    <string name="logout_error_play_service_connection">Google Play Services error.</string>
    <string name="logout_title">Logout</string>
    <string name="logout_progress">Please wait!</string>
    <string name="logout_confirm">Are you sure you want to Logout?</string>
    <string name="logout_anonymous_confirm">All your data will be DELETED! Are you sure?</string>
    <string name="logout_success">Logout successfully!</string>
    <string name="home_title">Home</string>
    <string name="home_select_profile_title">Select primary profile</string>
    <string name="home_select_profile_remember">Remember on this device</string>
    <string name="settings_title">Settings</string>
    <string name="register_anonymous_title">Register for Anonymous</string>
    <string name="link_my_account_title">Link My Account</string>
    <string name="search_title">Search</string>
    <string name="medical_record_title">Medical Record</string>
    <string name="schedule_title">Schedule</string>
    <string name="appointment_planer_title">Appointment Planer</string>
    <string name="my_schedule_title">My Schedule</string>
    <string name="view_schedule_title">Details</string>
    <string name="edit_schedule_title">Edit schedule</string>
    <string name="edit_schedule_title_new">New schedule</string>
    <string name="my_appointment_title">My Appointments</string>
    <string name="my_profile_title">My Profile</string>
    <string name="notifications_title">Notifications</string>
    <string name="help_title"><![CDATA[Help & feedback]]></string>
    <string name="btn_back">Back</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_login_anonymous">Use app WITHOUT login</string>
    <string name="btn_login_facebook">Facebook</string>
    <string name="btn_login_google">Google+</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_save">Save</string>
    <string name="menu_action_today">Today</string>
    <string name="menu_action_week_calendar">View Week</string>
    <string name="menu_action_three_days_calendar">View 3 Days</string>
    <string name="menu_action_day_calendar">View 1 Day</string>
    <string name="menu_action_events_calendar">View Agenda (not done)</string>
    <string name="notify_press_back_again_to_exit">Please press BACK again to exit!</string>
    <string name="drawer_item_my_appointment">My Appointments</string>
    <string name="drawer_item_my_schedule">My Working Schedule</string>
    <string name="drawer_item_search">Search</string>
    <string name="drawer_item_notifications">Notification</string>
    <string name="drawer_item_notifications_badge">10</string>
    <string name="drawer_item_appointment_planner">Appointment Planner</string>
    <string name="drawer_item_schedule">Schedule</string>
    <string name="drawer_item_medical_record">My Medical Record</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help"><![CDATA[Help & feedback]]></string>
    <string name="drawer_item_logout">Logout</string>
    <string name="profile_drawer_item_add_profile">Add Profile</string>
    <string name="profile_drawer_item_account_setting">Account Setting</string>
    <string name="profile_drawer_item_register">Register Now</string>
    <string name="profile_drawer_item_link_my_account">Link My Account</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome 1</string>
    <string name="slide_1_desc">The easiest way to manage your calendars and your events!</string>
    <string name="slide_2_title">Welcome 2</string>
    <string name="slide_2_desc">Look for meeting time with your partners and friends.</string>
    <string name="slide_3_title">Welcome 3</string>
    <string name="slide_3_desc">Easy to schedule everything you want.</string>
    <string name="slide_4_title">Welcome 4</string>
    <string name="slide_4_desc">Import your calendar to use or start over as well.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Help &amp; feedback -> Welcome slider</string>
    <string name="play_again">Play Again</string>
    <string name="menu_action_edit">Edit</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_cancel">Cancel</string>
    <string name="menu_action_done">Done</string>
    <string name="menu_action_skip">Skip</string>
    <string name="menu_action_save">Save</string>
</resources>